--- a/examples/commonLabels/helmizer.yaml
+++ b/examples/commonLabels/helmizer.yaml
@@ -1,22 +1,15 @@
 helmizer:
-  commandSequence:
-  - command: "helm"
-    args:
-      - "-n"
-      - "sealed-secrets"
-      - "template"
-      - "sealed-secrets"
-      - --output-dir
-      - '.'
-      - --include-crds
-      - --skip-tests
-      - --version
-      - '1.12.2'
-      - stable/sealed-secrets
+  preCommands:
+    - command: "helmfile"
+      args:
+        - template
+        - --skip-deps
+        - --output-dir-template
+        - "../"
 kustomize:
-  namespace: sealed-secrets
+  namespace: cert-manager
   resources:
-    - sealed-secrets/templates/
+    - cert-manager/
   patchesStrategicMerge:
     - extra/
   commonLabels:
