--- a/examples/patchesStrategicMerge/helmizer.yaml
+++ b/examples/patchesStrategicMerge/helmizer.yaml
@@ -1,27 +1,14 @@
 helmizer:
-  commandSequence:
-  - command: "helm"
-    args:
-      - "-n"
-      - "sealed-secrets"
-      - "template"
-      - "sealed-secrets"
-      - --output-dir
-      - '.'
-      - --include-crds
-      - --skip-tests
-      - --version
-      - '1.12.2'
-      - stable/sealed-secrets
-  dry-run: false
-  kustomization-directory: .
-  kustomization-file-name: kustomization.yaml
-  resource-absolute-paths: false
-  sort-keys: true
-  version: '0.1.0'
+  preCommands:
+    - command: "helmfile"
+      args:
+        - template
+        - --skip-deps
+        - --output-dir-template
+        - "../"
 kustomize:
-  namespace: sealed-secrets
-  resources:
-    - sealed-secrets/templates/
+  namespace: cert-manager
   patchesStrategicMerge:
     - extra/
+  resources:
+    - cert-manager/
