--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,8 @@
 repos:
-  - hooks:
+  # General pre-commit hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.6.0
+    hooks:
       - id: check-case-conflict
       - id: check-docstring-first
       - id: check-executables-have-shebangs
@@ -13,43 +16,50 @@ repos:
         args:
           - --remove
       - id: mixed-line-ending
-      - args:
-          - '--maxkb=1024'
-        id: check-added-large-files
-      - args:
+      - id: check-added-large-files
+        args:
+          - '--maxkb=64'
+      - id: trailing-whitespace
+        args:
           - '--markdown-linebreak-ext=md'
-        id: trailing-whitespace
       - id: check-symlinks
-      - args:
+      - id: check-yaml
+        args:
           - '--allow-multiple-documents'
-        id: check-yaml
-      - args:
-          - '--maxkb=1024'
-        id: check-added-large-files
       - id: requirements-txt-fixer
       - id: check-ast
-    repo: 'https://github.com/pre-commit/pre-commit-hooks'
-    rev: v4.4.0
-  - repo: https://github.com/asottile/reorder_python_imports
-    rev: v3.9.0
+  # Go specific hooks
+  - repo: https://github.com/tekwizely/pre-commit-golang
+    rev: v1.0.0-rc.1
     hooks:
-    - id: reorder-python-imports
-      args: [--application-directories, '.:src', --py36-plus]
-  - hooks:
+      - id: go-build-mod
+      - id: go-mod-tidy
+      - id: go-mod-tidy-repo
+      - id: go-test-mod
+      - id: go-test-repo-mod
+      - id: go-fmt
+      - id: go-fmt-repo
+  # Python specific hooks
+  - repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.12.0
+    hooks:
+      - id: reorder-python-imports
+        args: [--application-directories, '.:src', --py311-plus]
+  - repo: https://github.com/psf/black
+    rev: 24.4.2
+    hooks:
       - id: black
-        language_version: python3.10
+        language_version: python3.11
         args:
           - --line-length
           - "140"
-    repo: https://github.com/psf/black
-    rev: 23.1.0
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.991
+    rev: v1.10.0
     hooks:
-    - id: mypy
-      args:
-      - --check-untyped-defs
-      - --ignore-missing-imports
-      - --install-types
-      - --non-interactive
-      files: src/helmizer.py
+      - id: mypy
+        args:
+          - --check-untyped-defs
+          - --ignore-missing-imports
+          - --install-types
+          - --non-interactive
+        files: docs/diagrams/main.py
