--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,5 @@
 {
-  "python.linting.enabled": true,
-  "python.testing.unittestArgs": [
-    "-v",
-    "-s",
-    "./tests",
-    "-p",
-    "*test.py"
-  ],
-  "python.testing.pytestEnabled": false,
-  "python.testing.unittestEnabled": false,
-  "python.testing.promptToConfigure": false,
-  "python.defaultInterpreterPath": "./helmizer/venv/bin/python"
+  "go.useLanguageServer": true,
+  "go.buildOnSave": "package",
+  "go.testOnSave": true,
 }
