--- a/examples/patches/patch.yaml
+++ b/examples/patches/patch.yaml
@@ -2,7 +2,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sealed-secrets
-  namespace: sealed-secrets
+  name: cert-manager
+  namespace: cert-manager
 spec:
   minReadySeconds: 10
