--- a/examples/patchesStrategicMerge/extra/priority-class.yaml
+++ b/examples/patchesStrategicMerge/extra/priority-class.yaml
@@ -2,8 +2,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sealed-secrets
-  namespace: sealed-secrets
+  name: cert-manager
+  namespace: cert-manager
 spec:
   template:
     spec:
