- Update pre-commit hooks - Update renovate config - Switch to shell.nix

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -59,10 +59,10 @@
     {
       "enabled": true,
       "managers": [
-        "pre-commit"
+        "github-actions"
       ],
       "matchFiles": [
-        "**/.pre-commit-config.yaml"
+        "**/.github/workflows/*.yml"
       ]
     }
   ],
