--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,6 @@
 name: goreleaser
 
-"on":
+on:
   push:
     tags:
       - "v*"
@@ -14,10 +14,29 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.22.0'
+          go-version: '1.23.4'
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and Push Docker Image
+        run: |
+          docker buildx build --platform linux/amd64,linux/arm64,linux/386 \
+            -t ghcr.io/daemondude23/helmizer/helmizer:${{ github.ref_name }} \
+            -t ghcr.io/daemondude23/helmizer/helmizer:latest \
+            --push .
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
