--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
           go-version: '1.23.4'
 
       - name: Run Tests
-        run: go test -v ./...
+        run: go test -v ./src/...
 
   goreleaser:
     needs: test
