--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,8 @@ jobs:
           go-version: '1.23.4'
 
       - name: Run Tests
-        run: go test -v ./src/...
+        working-directory: ./src
+        run: go test -v ./...
 
   goreleaser:
     needs: test
